# eTalonu_validacija

./: .dockerignore  .gitignore  Containerfile  Dockerfile  LICENSE  Pipfile  README.md  boot.sh  callbacks.py  config.py  data_loading.py  data_manager.py  database.py  etalonu_validacijas.py  files.py  init_session.py  main.py  month_data.py  package-lock.json  package.json  pyproject.toml  remove_rows.py  requirements.txt  state_manager.py  streamlit_app.py  tailwind.config.js  utils.py  validacijas.py
.forgejo/workflows/: scan_vulnerabilities.yml
.github/workflows/: build-and-publish.yml
.helix/: languages.toml
.woodpecker/: build_and_publish.yml  scan_vuln.yml  scan_vulnerabilities.yaml  scan_vulnerabilties.yaml  woodpecker.yml
app/: __init__.py  models.py
app/ajax/: __init__.py  views.py
app/data/: __init__.py  views.py
app/main/: __init__.py  errors.py  forms.py  views.py
app/static/css/: main.css  main.css.map
app/static/js/: bundle.js  chart.js  newChart.js
app/static/src/: chartStore.js  formValidation.js  main.js  main.scss
app/templates/: 404.jinja  405.jinja  500.jinja  base.jinja  index.html.jinja  index.jinja  routes.jinja  tests.jinja  time.jinja  times.jinja
app/templates/macros/: render_form.jinja  render_form_elements.jinja  render_script.jinja  render_scripts.jinja
app/templates/partials/: chart_canvas.jinja  date_select_form.jinja
app/validation/: __init__.py  views.py
functions/: downloadData.py
helpers/: constants.py  detectEncoding.py  menu.py  userInput.py
migrations/versions/: 37a50250b000_change_column_data_type.py  5a2b0423ab02_initial_migration.py  809f526c0839_initial_migration.py  a326c43ed5c2_initial_migration.py
src/main/: main.py
src/main/common/: Constants.py
src/main/models/: Menu.py
tests/: test_callbacks.py  test_data_manager.py  test_database.py  test_state_manager.py  test_utils.py
tests/widgets/: test_charts.py  test_metrics.py  test_sidebar.py
widgets/: charts.py  metrics.py  sidebar.py
