[project]
name = "etalonu-validacija"
version = "0.1.0"
description = "Display statistics of Riga city public transportation ticket validations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "duckdb==1.3.2",
  "numerize>=0.12",
  "polars>=1.33.1",
  "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
  "pylint>=3.3.8",
  "pylsp-mypy>=0.7.0",
  "python-lsp-server>=1.13.1",
  "ruff>=0.13.2",
  "sqlfluff>=3.4.2",
  "tombi>=0.6.17",
]

[tool.ruff.format]
quote-style = "single"

[tool.sqlfluff.core]
dialect = "duckdb"
