[project]
name = "etalonu-validacija"
version = "0.1.0"
description = "Display statistics of Riga city public transportation ticket validations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "babel>=2.17.0",
  "duckdb==1.3.2",
  "polars>=1.33.1",
  "python-dateutil>=2.9.0.post0",
  "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.6",
  "ruff>=0.13.2",
  "sqlfluff>=3.4.2",
  "tombi>=0.6.17",
  "ty>=0.0.1a21",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8 naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PL",  # pylint
]
ignore = ["PLR2004", "F821"]

[tool.sqlfluff.core]
dialect = "duckdb"

[tool.basedpyright]
pythonVersion = "3.13"
pythonPlatform = "Windows"
typeCheckingMode = "off"
reportUnusedImport = false
reportUnusedVariable = false
