[project]
name = "etalonu-validacija"
version = "0.1.0"
description = "Display statistics of Riga city public transportation ticket validations"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "babel>=2.17.0",
  "duckdb==1.5.3",
  "polars>=1.34.0",
  "python-dateutil>=2.9.0.post0",
  "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.13.2",
  "sqlfluff>=3.4.2",
  "tombi>=0.6.17",
  "ty>=0.0.1a21",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "D",  # pydocstyle
  "DOC",  # pydoclint
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8 naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PL",  # pylint
]
ignore = ["PLR2004", "F821"]

[tool.ruff.lint.per-file-ignores]
'tests/*' = ["D", "DOC"]

[tool.tombi.files]
exclude = [".venv/**"]

[tool.ty.environment]
python-platform = "linux"
python-version = "3.14"

[tool.sqlfluff.core]
dialect = "duckdb"

[tool.coverage.run]
omit = ["tests/*"]
source = [
  ".",
  "widgets",
]
